--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "immutability-helper": "^2.8.1",
+    "lodash.flow": "^3.5.0",
     "moment": "^2.22.2",
     "react": "^16.5.2",
+    "react-beautiful-dnd": "^9.0.2",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
