--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-beautiful-dnd": "^9.0.2",
+    "react-csv": "^1.0.15-RC2",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.2",
